# signature-vulnerabilities_CTFs_foundry

./: .env.example  .gitignore  Makefile  README.md  foundry.toml  hardhat.config.ts  package.json  pnpm-lock.yaml
scripts_hardhat/: 1_getPublickey6.js  1_getPublickeyV6.js  2_getPublickeyV5.js  3_getPublickeyV6.js
scripts_python/: pyproject.toml
scripts_python/scripts_python/: 1_craftMessageAndSig.py  2_craftMessageAndSig.py
src/: 1_ReuseSignature.sol  1_ReuseSignature1.sol  2_ReuseSignature2.sol  3_ReuseSignature3.sol  ReuseSignature.sol
test/: 1_ReuseSignature.t.sol  1_ReuseSignature1.t.sol  2_ReuseSignature2.t.sol  3_ReuseSignature3.t.sol  ReuseSignature.t.sol
